part1/1_11/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: persistent-svc
spec:
  type: ClusterIP
  selector:
    app: persistent
  ports:
    - name: mainport
      port: 2345
      protocol: TCP
      targetPort: 3001
    - name: pingpongport
      port: 2346
      protocol: TCP
      targetPort: 3000
